refactored testlogger to use memory buffer (#2)
* added custom HTML report

* refacor: testlogger- switch from per-line file writes to in-memory buffering with single flush

* Added Custom HTML Report and Enhanced Screenshot Size Optimization

* added custom HTML report

* minor fix in custom HTML report

* updated custom report, added filter, added error messge, fixed result status logs in individual reports

* added screenshot optimization code

* added doc for screenshot code

* updated file name in pom